# krakker-backend

./: Cargo.toml  Dockerfile  README.md
prisma/: schema.prisma
prisma/migrations/20240927210138_0001/: migration.sql
prisma/migrations/20240928092451_notifications_added/: migration.sql
prisma/migrations/20240928111523_repo_id_type_changed/: migration.sql
prisma/migrations/20240928130904_on_cascade_1/: migration.sql
src/: config.rs  main.rs  prisma.rs
src/controllers/: auth.rs  mod.rs  notification.rs  project.rs  task.rs  user.rs
src/github/: worker.rs
src/mailer/: mailer.rs  mod.rs  models.rs  template.rs
src/middleware/: auth.rs
src/models/: auth.rs  mod.rs  notification.rs  project.rs  task.rs  user.rs
src/services/: common.rs  mod.rs  notifications.rs  project.rs  task.rs  user.rs
src/utils/: app_data.rs  mod.rs  openapi.rs  response.rs
